# k8s-observability-lab

./: .gitignore  README.md
deploy/compose/: .env.example  docker-compose.yml  otel-collector.yaml
deploy/k8s/base/: gateway.yaml  inventory.yaml  kustomization.yaml  namespace.yaml  order.yaml  otel-collector-config.yaml  otel-collector.yaml
deploy/k8s/overlays/eks/: kustomization.yaml  otel-collector-config.yaml  rbac.yaml
deploy/k8s/overlays/eks/patches/: otel-collector-sa.yaml
deploy/k8s/overlays/local-kind/: kustomization.yaml  lgtm.yaml  otel-collector-config.yaml
docs/: architecture.md  eks-migration.md  observability.md  roadmap.md
scripts/: loadgen.py
services/gateway/: Dockerfile
services/gateway/app/: main.py
services/inventory/: Cargo.toml  Dockerfile
services/inventory/src/: main.rs
services/order/: requirements.txt
services/order/app/: main.py  otel.py
